# python-kanban

./: .gitignore  LICENSE  README.rst  README_pypi.rst  app.py  main.py  pyproject.toml  settings.toml  settings2.toml
.github/workflows/: python-package.yml
python_kanban/: app.py  models.py  status_container_view.py  views.py
python_kanban/views/: add_task_view.py  delete_task_view.py  edit_tasks_view.py  list_tasks_view.py  no_tasks_view.py  status_container_view.py
tests/: conftest.py  test_add_task_view.py  test_delete_view.py  test_edit_tasks_view.py  test_list_tasks_view.py  test_models.py  test_no_tasks_view.py  test_python_kanban.py  test_status_container_view.py  test_views.py
