[tool.poetry]
name = "python-kanban"
version = "0.1.0"
description = "Text based interface for Kanban board"
authors = ["Fillipe Goulart <fillipe.gsm@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.14.4"
prompt-toolkit = "^3.0.18"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.7"
ipython = "^7.22.0"
jedi = "<0.18"
mock = "^4.0.3"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pytest-cov = {extras = ["toml"], version = "^2.12.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python_kanban = "main:run_app"

[tool.coverage.run]
omit = [
    "./config.py",
    "./main.py",
]
